# libsimmetrics

./: .gitignore  CMakeLists.txt  README  install.sh
exampleProgram/: CMakeLists.txt  exampleProgram.c  exampleProgram.cpp
include/: block_distance.h  cosine_similarity.h  cost.h  dice_similarity.h  double_metaphone.h  euclidean_distance.h  jaccard_similarity.h  jaro.h  jaro_winkler.h  levenshtein.h  matching_coefficient.h  metaphone.h  monge_elkan.h  needleman_wunch.h  overlap_coefficient.h  qgrams_distance.h  simmetrics.h  smith_waterman.h  smith_waterman_gotoh.h  soundex.h  tokenizer.h
simmetrics/: CMakeLists.txt  block_distance.cpp  cosine_similarity.cpp  cost.c  cost.cpp  dice_similarity.cpp  double_metaphone.c  double_metaphone.cpp  euclidean_distance.cpp  jaccard_similarity.cpp  jaro.cpp  jaro_winkler.cpp  levenshtein.cpp  matching_coefficient.cpp  metaphone.cpp  monge_elkan.cpp  needleman_wunch.cpp  overlap_coefficient.cpp  qgrams_distance.cpp  simmetrics.cpp  smith_waterman.cpp  smith_waterman_gotoh.cpp  soundex.cpp  tokenizer.cpp  util.cpp
